// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Default 1`] = `
<button
  onClick={[Function]}
>
  Click Me!
</button>
`;

exports[`Storyshots Button Primary 1`] = `
<button
  className="button button--medium button--light button--primary"
  disabled={false}
  onClick={[Function]}
>
  Click Me!
</button>
`;

exports[`Storyshots Button Secondary 1`] = `
<button
  className="button button--medium button--light button--secondary"
  disabled={false}
  onClick={[Function]}
>
  Click Me!
</button>
`;

exports[`Storyshots Button Tertiary 1`] = `
<button
  className="button button--medium button--light button--tertiary"
  disabled={false}
  onClick={[Function]}
>
  Click Me!
</button>
`;
